fixed font size, weight, spacing to match bahai.us

--- a/sass/_init.scss
+++ b/sass/_init.scss
@@ -49,12 +49,12 @@ $legacy-support-for-ie8: true;
 // use in the normalize.scss file.
 // @see http://compass-style.org/reference/compass/typography/vertical_rhythm/
 
-$base-font-size:   16px; // The font size set on the root html element.
-$base-line-height: 24px; // This line-height determines the basic unit of vertical rhythm.
+$base-font-size:   18.5px; // The font size set on the root html element.
+$base-line-height: 31.68px; // This line-height determines the basic unit of vertical rhythm.
 
-$h1-font-size: 1.6    * $base-font-size;
-$h2-font-size: 1.2  * $base-font-size;
-$h3-font-size: 1 * $base-font-size;
+$h1-font-size: 1.9    * $base-font-size;
+$h2-font-size: 1.3  * $base-font-size;
+$h3-font-size: 1.3 * $base-font-size;
 $h4-font-size: 1    * $base-font-size;
 $h5-font-size: 1 * $base-font-size;
 $h6-font-size: 1 * $base-font-size;
